syntax = "proto3";

import "reservation_model.proto";

option java_multiple_files = true;
option java_package = "no.acntech.reservation.endpoint";

service ReservationEndpoint {

  rpc getReservation (GetReservationRequest) returns (GetReservationResponse) {
  }

  rpc findReservations (FindReservationsRequest) returns (FindReservationsResponse) {
  }

  rpc createReservation (CreateReservationRequest) returns (CreateReservationResponse) {
  }

  rpc updateReservation (UpdateReservationRequest) returns (UpdateReservationResponse) {
  }

  rpc deleteReservation (DeleteReservationRequest) returns (DeleteReservationResponse) {
  }
}
